fix bug for displaying inference plugin

--- a/tensorboard/components/tf_tensorboard/default-plugins.html
+++ b/tensorboard/components/tf_tensorboard/default-plugins.html
@@ -39,3 +39,4 @@ limitations under the License.
 <link rel="import" href="../tf-interactive-inference-dashboard/tf-interactive-inference-dashboard.html">
 <link rel="import" href="../tf-hparams-dashboard/tf-hparams-dashboard.html">
 <link rel="import" href="../tf-mesh-dashboard/tf-mesh-dashboard.html">
+<link rel="import" href="../tf-inference-dashboard/tf-inference-dashboard.html">
