--- a/tensorboard/components/tf_imports/katexjs.html
+++ b/tensorboard/components/tf_imports/katexjs.html
@@ -1,3 +1,4 @@
-<script src="https://cdn.jsdelivr.net/npm/katex@0.10.0-beta/dist/katex.min.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0-beta/dist/katex.min.css">
+<!-- <script src="https://cdn.jsdelivr.net/npm/katex@0.10.0-beta/dist/katex.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0-beta/dist/katex.min.css"> -->
 
+<script jscomp-minify src="../katex/katex.js"></script>
