fix bugs on katex js

--- a/tensorboard/components/tf_imports/katex-js.html
+++ b/tensorboard/components/tf_imports/katex-js.html
@@ -1,1 +1,5 @@
-<script jscomp-minify src="../katex/katex.js"></script>
+<!-- 
+<script jscomp-minify src="../katex.js"></script>
+-->
+
+<link rel="import" href="../katex-js/katex.js" jscomp-suppress>
