disable katex for graph edit plugin

--- a/tensorboard/components/tf_imports/katex-js.html
+++ b/tensorboard/components/tf_imports/katex-js.html
@@ -1,5 +1,5 @@
-<!-- 
-<script jscomp-minify src="../katex.js"></script>
--->
+<script jscomp-suppress src="../katex-js/katex.js"></script>
 
+<!--
 <link rel="import" href="../katex-js/katex.js" jscomp-suppress>
+-->
